<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StaffCreateRoom">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            android:layout_below="@id/CRoomText" />

        <ImageButton
            android:id="@+id/homeButtonBook"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@id/CRoomText"
            android:layout_marginStart="10dp"
            android:layout_marginTop="22dp"
            android:background="@drawable/home" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create Room"
            android:textSize="30sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:id="@+id/CRoomText"/>

        <TextView
            android:id="@+id/Date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dateText"
            android:layout_below="@+id/toolbar"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp"/>

        <Button
            android:id="@+id/DateS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Date"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="40dp"
            android:text="Select date"
           />

        <TextView
            android:id="@+id/Duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/durationText"
            android:layout_below="@+id/DateS"
            android:layout_marginLeft="30dp"/>
        <Spinner
            android:id="@+id/DurationS"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@+id/Duration"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="40dp"/>

        <TextView
            android:id="@+id/Floor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/floorText"
            android:layout_below="@+id/DurationS"
            android:layout_marginLeft="30dp"/>
        <Spinner
            android:id="@+id/FloorS"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@+id/Floor"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="40dp"/>

        <TextView
            android:id="@+id/Room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/roomText"
            android:layout_below="@+id/FloorS"
            android:layout_marginLeft="30dp"/>
        <Spinner
            android:id="@+id/RoomS"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@+id/Room"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="40dp"/>

        <TextView
            android:id="@+id/Capacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/capacityText"
            android:layout_below="@+id/RoomS"
            android:layout_marginLeft="30dp"/>
        <Spinner
            android:id="@+id/CapacityS"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@+id/Capacity"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="40dp"/>

        <TextView
            android:id="@+id/Price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/priceText"
            android:layout_below="@+id/CapacityS"
            android:layout_marginLeft="30dp"/>

        <EditText
            android:id="@+id/PriceS"
            android:layout_width="224dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Price"
            android:ems="10"
            android:inputType="number"
            android:hint="77"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="40dp"/>/>
        <TextView
            android:id="@+id/PromoCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/promocodetext"
            android:layout_below="@+id/PriceS"
            android:layout_marginLeft="30dp"/>

        <EditText
            android:id="@+id/PromoCodeS"
            android:layout_width="224dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/PromoCode"
            android:inputType="textPersonName"
            android:hint="SevenGuys7"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="40dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/MakeRoom"
            android:layout_below="@+id/PromoCodeS"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="40dp"
            android:layout_centerInParent="true"
            android:text="Create Room"
         />


    </RelativeLayout>


</ScrollView>